--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "element-plus": "^2.1.4",
     "vue": "^3.2.13",
+    "vue-qr": "^4.0.9",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
